   
===========
Changes log  
===========

- @version-full@ (@release-date@)
    - Bug fixed

- 2.1 Release Candidate 4 (04/06/2012)
    - Bug fixed
       - Basic Fix for content negotiation regarding input entities.
         Reported by Thierry Templier.
       - Removed useless reverse DNS lookup when creating a client socket 
         channel. Reported and contributed by Alessandro Pacifici.
       - Fixed NPE when setting last segment on Reference.
         Reported by Laszlo Hordos.
       - Fixed OSGi manifest file for the jackson library that exposes a 
         private package. Reported by Laszlo Hordos.
       - Enhanced support of ServerResource that inherits from generic classes.
         Reported by Thierry Templier.
       - Fixed content negotiation regarding request entities
         to ensure a better annotated method dispatching.
       - Reference doesn't consider '{' and '}' as invalid characters anymore,
         allowing resolution of URI templates on the client-side.
         Reported by Andrei Pozolotin.
       - Fixed OutputRepresentation with negative int that can't be serialized 
         on client side.
         Reported by Gabriel Pulido.
       - Fixed parsing of Feed using the Rome extension.
         Reported by Andy Dennie.
       - Allowed multiple cookies set at once for JAX-RS.
         Reported and contributed by Grzegorz Godlewski.
       - Fixed formatting of expires cookie setting value.
         Reported and contributed by Grzegorz Godlewski.
       - Fixed CookieAuthenticator wrong login/logout intercept comparison.
         Reported and contributed by Martin Svensson.
       - Fix representations and converters that swallow exceptions whereas the 
         ConverterHelper#toObject throws IOException.
         Reported by gavares.
       - Fixed namespaces declaration using SaxRepresentation.
         Reported by Nicholas Waltham.
       - Fixed scoring algorithm of the JaxbConverter, detected when used in 