@@ -1,21 +1,24 @@
 #Firefox for Windows
-Mozilla/{mozillaVersion} (Windows; U; {agentOs}; {osData}; rv:{releaseVersion}) Gecko/{geckoReleaseDate} {agentName}/{agentVersion}
-Mozilla/{mozillaVersion} (Windows; U; {agentOs}; {osData}; rv:{releaseVersion}) Gecko/{geckoReleaseDate} {agentName}/{agentVersion} ({agentComment})
-Mozilla/{mozillaVersion} (compatible; Windows; U; {agentOs}; {osData}; rv:{releaseVersion}) Gecko/{geckoReleaseDate} {agentName}/{agentVersion}
+Mozilla/{mozillaVersion} ({osData}Windows; U; {agentOs}; {osData}; rv:{releaseVersion}) Gecko/{geckoReleaseDate} {agentName}/{agentVersion}
+Mozilla/{mozillaVersion} ({osData}Windows; U; {agentOs}; {osData}; rv:{releaseVersion}) Gecko/{geckoReleaseDate} {agentName}/{agentVersion} ({agentComment})
+#Firefox for Macintosh
+Mozilla/{mozillaVersion} ({osData}Macintosh; U; {agentOs}; {osData}; rv:{releaseVersion}) Gecko/{geckoReleaseDate} {agentName}/{agentVersion}
+Mozilla/{mozillaVersion} ({osData}Macintosh; U; {agentOs}; {osData}; rv:{releaseVersion}) Gecko/{geckoReleaseDate} {agentName}/{agentVersion} ({agentComment})
 #Firefox for Linux
 Mozilla/{mozillaVersion} (X11; U; {agentOs}; {osData}; rv:{releaseVersion}) Gecko/{geckoReleaseDate} {agentName}/{agentVersion}
-#Firefox for Linux Debian
 Mozilla/{mozillaVersion} (X11; U; {agentOs}; {osData}; rv:{releaseVersion}) Gecko/{geckoReleaseDate} {agentName}/{agentVersion} ({agentComment})
-#Firefox for Macintosh
-Mozilla/{mozillaVersion} (Macintosh; U; {agentOs}; {osData}; rv:{releaseVersion}) Gecko/{geckoReleaseDate} {agentName}/{agentVersion}
 #Firefox (default)
+Mozilla/{mozillaVersion} ({agentOs}; {osData}; rv:{releaseVersion}) Gecko/{geckoReleaseDate} {agentName}/{agentVersion} ({agentComment})
 Mozilla/{mozillaVersion} ({agentOs}; {osData}; rv:{releaseVersion}) Gecko/{geckoReleaseDate} {agentName}/{agentVersion}
 #Internet Explorer (default)
 Mozilla/{mozillaVersion} (compatible; {agentName} {agentVersion}; {agentOs}{facultativeData})
-#Safari v2
+#Chrome
+Mozilla/{mozillaVersion} ({agentOsShortName}; {osData}) AppleWebKit/{appleWebKitVersion} ({appleWebKitComment}) {agentName}/{agentVersion} Safari/{safariVersion}
+Mozilla/{mozillaVersion} ({agentOsShortName}; U; {osData}) AppleWebKit/{appleWebKitVersion} ({appleWebKitComment}) {agentName}/{agentVersion} {safariData}
+#Safari
+Mozilla/{mozillaVersion} ({agentOsShortName}; U; {agentOs};{osData}) AppleWebKit/{appleWebKitVersion} ({appleWebKitComment}) Version/{agentVersion} {agentName}/{buildNumber}
 Mozilla/{mozillaVersion} ({agentOsShortName}; U; {agentOs};{osData}) AppleWebKit/{appleWebKitVersion} ({appleWebKitComment}) {agentName}/{agentVersion}
-#Safari v3
-Mozilla/{mozillaVersion} ({agentOsShortName}; U; {agentOs};{osData}) AppleWebKit/{appleWebKitVersion} ({appleWebKitComment}) Version/{familyVersion} {agentName}/{agentVersion}
+Mozilla/{mozillaVersion} ({agentOsShortName}; {agentOs}) AppleWebKit/{appleWebKitVersion} ({appleWebKitComment}) Version/{agentVersion} {agentName}/{buildNumber}
 #Opera for Macintosh
 {agentName}/{agentVersion} (Macintosh; {agentOs}; U; {osData})
 #Opera for Linux
@@ -23,10 +26,8 @@ Mozilla/{mozillaVersion} ({agentOsShortName}; U; {agentOs};{osData}) AppleWebKit
 #Opera for Windows
 {agentName}/{agentVersion} ({agentOs}; U; {osData})
 #Konqueror
-Mozilla/{mozillaVersion} (compatible; {agentName}/{commentAttribute}; {agentOs}{facultativeData}) KHTML/{agentVersion}
 Mozilla/{mozillaVersion} (compatible; {agentName}/{commentAttribute}; {agentOs}{facultativeData}) KHTML/{agentVersion} ({agentComment})
-#Chrome
-Mozilla/{mozillaVersion} ({agentOsShortName}; U; {osData}) AppleWebKit/{appleWebKitVersion} ({appleWebKitComment}) {agentName}/{agentVersion} {safariData}
+Mozilla/{mozillaVersion} (compatible; {agentName}/{commentAttribute}; {agentOs}{facultativeData}) KHTML/{agentVersion}
 #Misc
 {agentName}/{agentVersion}
 {agentName}/{agentVersion} ({agentComment})
